# try-cf-python

./: README.md
sandbox/: pyproject.toml
sandbox/sandbox/: main.py  requirements.txt
scripts/: deploy.sh  export-requirements-txt.sh
