[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["sky0621 <sky14work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
functions-framework = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
